--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Cloud  Run
+name: Deploy to Cloud Run
 
 on:
   push:
@@ -24,18 +24,13 @@ jobs:
           gcloud auth configure-docker --quiet
 
       - name: Build image
-        run: |
-          docker build -t llm-rag-app .
+        run: docker build -t llm-rag-app .
 
       - name: Tag image
-        run: |
-          docker tag llm-rag-app \
-            ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/llm-rag-repo/llm-rag-app:${{ github.sha }}
+        run: docker tag llm-rag-app ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/llm-rag-repo/llm-rag-app:${{ github.sha }}
 
       - name: Push image
-        run: |
-          docker push \
-            ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/llm-rag-repo/llm-rag-app:${{ github.sha }}
+        run: docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/llm-rag-repo/llm-rag-app:${{ github.sha }}
 
       - name: Deploy to Cloud Run
         run: |
