--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,9 @@ jobs:
 
       - name: Set gcloud project and configure Docker
         run: |
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud auth configure-docker --quiet
+          gcloud config set project llm-rag-gcp
+          gcloud auth configure-docker europe-west1-docker.pkg.dev --quiet
+
 
       - name: Build image
         run: docker build -t llm-rag-app .
