--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,8 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 key.json
+chroma_db/
+*.jsonl
+evaluation_results*.json
+evaluation_results*.summary.json
+eval_results.jsonl
